refonte du style

--- a/index.html
+++ b/index.html
@@ -43,20 +43,25 @@
                     </div>
                     <div class="liensCarte">
                         <a href="https://www.linkedin.com/in/ali-yavuzyilmaz-0097a0150/">
-                            <img src="./media/linkedin.png" alt="linkedin de Ali" class="liensNav">
+                            <img src="./media/iconlinkedin.png" alt="linkedin de Ali" class="liensNav">
                         </a>
                         <a href="./media/CVAli.pdf">
-                            <img src="./media/cv.png" alt="Cv de Ali" class="liensNav">
+                            <img src="./media/iconcv.png" alt="Cv de Ali" class="liensNav">
+                        </a>
+                        <a href="tel:+33619376926" class="appel">
+                            <img src="./media/icontelephone.png" alt="icone appel">
                         </a>
                     </div>
-                    <a href="mailto:aliyavuzyilmaz61@gmail.com" class="boutonEmail">Contactez par mail</a>
-                    <a href="tel:+33619376926" class="appel"><img src="./media/icontelephone.png" alt="icone appel"></a>
+                    <div class="liensContact">
+                        <a href="mailto:aliyavuzyilmaz61@gmail.com" class="boutonEmail">Contactez par mail</a>
+                        
+                    </div>
                 </div>
             </div>
         </nav>
     </header>
     <main>
-
+        <div class="middle-line"></div>
     </main>
     <footer>
 
