ajout des projet et style, ajout du script js et du json

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <script defer src="vanilla-tilt.js"></script>
+    <script defer src="./vanilla-tilt.js"></script>
+    <script defer src="./script.js"></script>
     <title>Portfolio Ali</title>
 </head>
 
@@ -61,7 +62,13 @@
         </nav>
     </header>
     <main>
+        <div class="parentProjet" id="htmlCssSeoProjets">
+            <h2 class="titreProjets">Projets Html & Css, SEO</h2>
+        </div>
         <div class="middle-line"></div>
+        <div class="parentProjet" id="javascriptProjets">
+            <h2 class="titreProjets">Projets JavaScript</h2>
+        </div>
     </main>
     <footer>
 
