--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                             viewBox="0 0 48 48">
                             <path fill="#0277BD" d="M41,5H7l3,34l14,4l14-4L41,5L41,5z"></path><path fill="#039BE5" d="M24 8L24 39.9 35.2 36.7 37.7 8z"></path><path fill="#FFF" d="M33.1 13L24 13 24 17 28.9 17 28.6 21 24 21 24 25 28.4 25 28.1 29.5 24 30.9 24 35.1 31.9 32.5 32.6 21 32.6 21z"></path><path fill="#EEE" d="M24,13v4h-8.9l-0.3-4H24z M19.4,21l0.2,4H24v-4H19.4z M19.8,27h-4l0.3,5.5l7.9,2.6v-4.2l-4.1-1.4L19.8,27z"></path>
                             </svg>, 
-                            SEO <img src="./media/iconseo.png"alt="icone seo">,
-                            JAVASCRIPT <img src="./media/iconjs.png" alt="icone Javascript">,<br>
-                            REACT <img src="./media/iconreact.png" alt="icone react">,
-                            NODE.JS <img src="./media/iconnodejs.png" alt="icone nodejs">,
-                            EXPRESS <img src="./media/iconexpress.png" alt="icone express">,
-                            MONGODB <img src="./media/iconemongodb.png" alt="icone mongoDB">
+                            SEO <img src="./media/iconseo.png"alt="icone seo" class="iconCarte">,
+                            JAVASCRIPT <img src="./media/iconjs.png" alt="icone Javascript" class="iconCarte">,<br>
+                            REACT <img src="./media/iconreact.png" alt="icone react" class="iconCarte">,
+                            NODE.JS <img src="./media/iconnodejs.png" alt="icone nodejs" class="iconCarte">,
+                            EXPRESS <img src="./media/iconexpress.png" alt="icone express" class="iconCarte">,
+                            MONGODB <img src="./media/iconemongodb.png" alt="icone mongoDB" class="iconCarte">
                         </p>
                     </div>
                     <div class="liensCarte">
@@ -50,7 +50,7 @@
                             <img src="./media/iconcv.png" alt="Cv de Ali" class="liensNav">
                         </a>
                         <a href="tel:+33619376926" class="appel">
-                            <img src="./media/icontelephone.png" alt="icone appel">
+                            <img src="./media/icontelephone.png" alt="icone appel" class="liensNav">
                         </a>
                     </div>
                     <div class="liensContact">
@@ -71,7 +71,7 @@
         </div>
     </main>
     <footer>
-
+        
     </footer>
 </body>
 
