--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <a href="https://www.linkedin.com/in/ali-yavuzyilmaz-0097a0150/">
                             <img src="./assets/iconlinkedin.png" alt="linkedin de Ali" class="liensNav">
                         </a>
-                        <a href="./assets/CVAli.pdf">
+                        <a href="./assets/CV-ALI.pdf">
                             <img src="./assets/iconcv.png" alt="Cv de Ali" class="liensNav">
                         </a>
                         <a href="tel:+33619376926" class="appel">
