--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
         </div>
     </main>
     <footer>
-
+        <div class="parentCitation">
+            <p class="citation"></p>
+            <h3 class="auteur"></h3>
+        </div>
     </footer>
 </body>
 
