changement image webp

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <div class="ecran">
                 <div class="carte" data-tilt>
-                    <img src="./assets/ali.jpg" alt="Photo de profil de Ali" class="photoCarte">
+                    <img src="./assets/ali.webp" alt="Photo de profil de Ali" class="photoCarte">
                     <h1 class="titreCarte">Ali Yavuzyilmaz</h1>
                     <div class="descriptionCarte">
                         <p class="descriptionMetier">
@@ -88,12 +88,15 @@
         </nav>
     </header>
     <main>
-        <div class="parentProjet" id="htmlCssSeoProjets">
-            <h2 class="titreProjets">Projets Html & Css, SEO</h2>
+        <div class="mainProjet">
+            <div class="parentProjet" id="htmlCssSeoProjets">
+                <h2 class="titreProjets">Projets Html & Css, SEO</h2>
+            </div>
+            <div class="middle-line"></div>
+            <div class="parentProjet" id="javascriptProjets">
+                <h2 class="titreProjets">Projets JavaScript</h2>
+            </div>
         </div>
-        <div class="middle-line"></div>
-        <div class="parentProjet" id="javascriptProjets">
-            <h2 class="titreProjets">Projets JavaScript</h2>
         </div>
     </main>
     <footer>
