ajout de style et changement du bouton contact par mail

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         </a>
                     </div>
                     <div class="liensContact">
-                        <a href="mailto:aliyavuzyilmaz61@gmail.com" class="boutonEmail">Contactez par mail</a>
+                        <a href="mailto:aliyavuzyilmaz61@gmail.com" class="boutonEmail">Contact par mail</a>
 
                     </div>
                 </div>
