--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Portfolio de Ali Yavuzyilmaz, Développeur web de région Parisienne">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600&display=swap" media="print" onload="this.media='all'">
     <link rel="stylesheet" href="./style.css">
     <script defer src="./vanilla-tilt.js"></script>
     <script defer src="./script.js"></script>
@@ -17,7 +20,13 @@
         <nav>
             <div class="ecran">
                 <div class="carte" data-tilt>
-                    <img src="./assets/ali.webp" alt="Photo de profil de Ali" class="photoCarte">
+                    <img 
+                        src="./assets/ali.webp" 
+                        alt="Photo de profil de Ali" 
+                        class="photoCarte" 
+                        width="320" 
+                        height="320" 
+                        loading="lazy">
                     <h1 class="titreCarte">Ali Yavuzyilmaz</h1>
                     <div class="descriptionCarte">
                         <p class="descriptionMetier">
